Committing lots of changes over a long period of time. Lots of work towards the lockdown alcohol and minimum unit price interventions. Should have been better at committing this stuff but theres been a lot of switching between different ideas

--- a/FEM_R/IJM_PAPER1_ALL_ANALYSES.Rmd
+++ b/FEM_R/IJM_PAPER1_ALL_ANALYSES.Rmd
@@ -546,7 +546,7 @@ compareSurvivalCurve <- function(cohort, intervention, int_name, save=FALSE,
   # Calculate age and survival curves
   cohort$Age <- (cohort$year - 2012) + 50
   intervention$Age <- (intervention$year - 2012) + 50
-  cohort$Survival <- cohort$m_endpop_all / cohort$m_endpop_all[1]
+  cohort$Survival <- cohort$m_endpop_all / cohort$m_endpop_all+[1]
   intervention$Survival <- intervention$m_endpop_all / intervention$m_endpop_all[1]
 
   survivals <- data.frame(cohort$Age, cohort$Survival, intervention$Survival)
